--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-time-machine
+title: Tentacle
+description:Travel in a sub-ship though the ocean depths and take out all the dangerous tentacle creatures. Be careful not to be touched by the nasty slimy tentacle arms, too manny hit.
+
+show_downloads: True
+
